--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
         "target": "ES2019",
         "sourceMap": true,
         "resolveJsonModule": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "declaration": true
     },
     "include": [
         "src/**/*"
