--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,8 @@
         "ecmaVersion": 11,
         "sourceType": "module"
     },
-    "rules": {}
+    "rules": {
+        "@typescript-eslint/type-annotation-spacing": "warn",
+        "space-in-parens": "warn"
+    }
 }
