--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "minecraftingdbot",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Discord bot for unofficial Minecrafting.ru discord",
   "main": "index.js",
   "scripts": {
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "cheerio": "1.0.0-rc.10",
-    "discord.js": "^12.5.3",
+    "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "fast-xml-parser": "^3.19.0",
     "lodash": "^4.17.21",
     "log4js": "^6.3.0",
+    "luxon": "^2.0.1",
     "minecraft-server-util": "^3.5.2",
-    "moment": "^2.29.1",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.23",
+    "@types/glob": "^7.1.4",
     "@types/lodash": "^4.14.168",
+    "@types/luxon": "^1.27.1",
     "@types/node-fetch": "^2.5.7",
     "@types/request-promise-native": "^1.0.17",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
@@ -36,6 +38,6 @@
     "url": "https://github.com/Virenbar/MinecraftingDBot"
   },
   "engines": {
-    "node": "12.x"
+    "node": "16.x"
   }
 }
