--- a/config.json
+++ b/config.json
@@ -1,6 +1,14 @@
 {
-  "prefix": "!",
   "token": "nope",
+  "primary": {
+    "guild": "227803301725339649",
+    "channel": "875471080649810042"
+  },
+  "channels": {
+    "chNews": "444843811676618753",
+    "chMinecraft": "",
+    "chServerLog": "444843716595679232"
+  },
   "mcServer": {
     "host": "minecrafting.ru",
     "port": 25565
@@ -9,9 +17,6 @@
     "guild": "227803301725339649",
     "channel": "595916641070481408"
   },
-  "chNews": "444843811676618753",
-  "chMinecraft": "",
-  "chServerLog": "444843716595679232",
   "BansPage": "http://minecrafting.ru/page/bans",
   "badUsers": [
     "132479201470185472",
