--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Discord bot for unofficial Minecrafting.ru discord",
   "main": "index.js",
   "scripts": {
+    "start": "node build/index.js",
+    "start:dev": "tsc && node build/index.js",
+    "pm2": "pm2 start DtDTS.config.js",
+    "pm2:i": "npm i --only=prod",
     "build": "tsc",
-    "start": "npm run build && node build/index.js",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -15,7 +18,7 @@
     "fast-xml-parser": "^3.19.0",
     "lodash": "^4.17.21",
     "log4js": "^6.3.0",
-    "luxon": "^2.0.1",
+    "luxon": "^2.0.0",
     "minecraft-server-util": "^3.5.2",
     "node-fetch": "^2.6.1"
   },
@@ -23,7 +26,7 @@
     "@types/cheerio": "^0.22.23",
     "@types/glob": "^7.1.4",
     "@types/lodash": "^4.14.168",
-    "@types/luxon": "^1.27.1",
+    "@types/luxon": "^2.0.0",
     "@types/node-fetch": "^2.5.7",
     "@types/request-promise-native": "^1.0.17",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
